Finished the landing page exercise for The Odin Project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="default">
-        <nav><span class="logo">Header Logo</span><span>header link one</span><span>header link two</span><span>header link
+        <nav><span class="logo">Header Logo</span><span></span><span>header link one</span><span>header link two</span><span>header link
                 three</span></nav>
         <div class="Segment1">
             <div class="main-head">
@@ -24,6 +24,31 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="random">
+            <div class="title">Some random information.</div>
+            <div class="elements">
+            <div class="eles"><img src="chargers.png" class="imgs"><br>this is some substext under and illustration or image</div>
+            <div class="eles"><img src="chargers.png" class="imgs"><br>this is some substext under and illustration or image</div>
+            <div class="eles"><img src="chargers.png" class="imgs"><br>this is some substext under and illustration or image</div>
+            <div class="eles"><img src="chargers.png" class="imgs"><br>this is some substext under and illustration or image</div>
+            </div>
+        </div>
+        <div class="grey">
+            <div class="quote">
+            <div class="phrase">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="author">-Thor, God of Thunder</div>
+            </div>
+        </div>
+        <div class="final">
+            <div class="cta-container">
+                <div class="cta-text">Call to action! It's time!<br><div class="subtext2">Sign up for our product by clicking that button right over there!</div></div>
+                <button class="signup2">Sign up</button>
+            </div>
+
+        </div>
+        <footer>Copyright © The Odin Project 2021</footer>
+    </main>
 
 </body>
 
